NLP TP's/texts/robotics/robotics.stackexchange_0000081256.txt
Q:

error: 'Point' does not name a type

Hi,
I'm trying to utilize the geometry_msgs 'Point' type and receiving this error:
/home/viki/catkin_ws/src/ibvs/src/visual_servoing.cpp:42:1: error: ‘Point’ does not name a type
Point CENTER = Point(WIDTH/2, HEIGHT/2);
^
I'm assuming its something to do with my Cmakelists.txt or package.xml, as I've specified the include.
Cmakelists.txt: http://imgur.com/a/CF2hb
package.xml: http://imgur.com/a/PTQzD
visual_servoing.cpp: http://imgur.com/a/N90cB

Originally posted by Dominati on ROS Answers with karma: 11 on 2017-06-11
Post score: 1

Original comments
Comment by Dominati on 2017-06-11:
I've also tried an alternate syntax, which still returns a similar error (see image link below).
http://imgur.com/a/Uk4HQ

A:

Looks like there are a few problems here:

The Point class is in the geometry_msgs namespace, so you should use the fully-namespaced class type: geometry_msgs::Point
ROS message types (such as point) only have default constructors, so you have to construct the object before you can fill in its fields.
You cannot have code outside of a function or class in C++ (as in your second try)

P.S. - for future questions please use the "preformatted text" button and paste your code and error messages directly into the question.

Originally posted by ahendrix with karma: 47576 on 2017-06-11
This answer was ACCEPTED on the original site
Post score: 1

